apps/base/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    gethomepage.dev/href: "https://grafana.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/description: "Analytics and interactive visualization web application"
    gethomepage.dev/app: grafana
    gethomepage.dev/group: "Monitoring"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/grafana.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`grafana.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: grafana
          port: 80
  tls: {}
